--- a/index.html
+++ b/index.html
@@ -1,9 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Coffe Shop</title>
+    <meta name="description" content="Portafolio de Osvaldo O. en TripleTen" />
+    <meta name="keywords" content="html, css, javascript" />
+    <meta name="author" content="Osvaldo O." />
+    <link rel="shortcut icon" href="favicon_coffee_bean.ico" />
+    <link rel="stylesheet" href="./pages/index.css" />
+    <link rel="stylesheet" href="./vendor/normalize.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <div class="page">
+      Probando...
+      <header class="header"></header>
+      <main class="main"></main>
+      <footer class="footer"></footer>
+    </div>
+  </body>
 </html>
