--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Portafolio de Osvaldo O. en TripleTen" />
     <meta name="keywords" content="html, css, javascript" />
     <meta name="author" content="Osvaldo O." />
-    <link rel="shortcut icon" href="favicon_coffee_bean.ico" />
+    <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" href="./pages/index.css" />
     <link rel="stylesheet" href="./vendor/normalize.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
