--- a/index.html
+++ b/index.html
@@ -19,8 +19,53 @@
   </head>
   <body>
     <div class="page">
-      Probando...
-      <header class="header"></header>
+      <header class="header">
+        <nav class="nav">
+          <img
+            class="nav__logo"
+            src="/images/logo_coffeeshop_dark.svg"
+            alt="Logo Coffeshop"
+          />
+          <ul class="nav__links">
+            <li>
+              <a href="#" class="nav__link">Recetas</a>
+            </li>
+            <li><a href="#" class="nav__link">Reservar una Mesa</a></li>
+            <li>
+              <a href="#" class="nav__link">Contactos</a>
+            </li>
+          </ul>
+        </nav>
+        <h1 class="header__title">
+          <span class="header__title-accent">Café de Especialidad <br /></span>
+          en Triple Peaks
+        </h1>
+        <div class="header__description">
+          ¡Te damos la bienvenida a nuestra zona de estudio! Aquí tenemos café
+          para darte energía y motivar tu creatividad.
+        </div>
+        <img
+          class="header__image"
+          src="./images/inside_coffee_shop.png"
+          alt=""
+        />
+        <div class="header__footer">
+          <div class="header__info">
+            <p class="header__paragraph">Horarios:</p>
+            <p class="header__paragraph">
+              Lunes a Viernes (de 10:00h a 19:00h)
+            </p>
+            <p class="header__paragraph">
+              Sabados y Domingos (de 11:00h a 18:00h)
+            </p>
+          </div>
+          <div class="header__address">
+            <p class="header__paragraph">
+              Avenida del Éxito 200, Ciudad Triple Peaks
+            </p>
+          </div>
+        </div>
+      </header>
       <main class="content">
         <section class="recipes"></section>
         <section class="reservation"></section>
