--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           />
           <ul class="nav__links">
             <li>
-              <a href="#" class="nav__link">Recetas</a>
+              <a href="#recipes" class="nav__link">Recetas</a>
             </li>
             <li><a href="#" class="nav__link">Reservar una Mesa</a></li>
             <li>
@@ -66,8 +66,47 @@
           </div>
         </div>
       </header>
+
       <main class="content">
-        <section class="recipes"></section>
+        <section id="recipes" class="recipes">
+          <h2 class="recipes__title">Recetas</h2>
+          <p class="recipes__subtitle">
+            Echa un vistazo a las recetas que hemos reunido para que elabores
+            tus propios snacks.
+          </p>
+          <div class="recipes__videos">
+            <div class="recipes__video-item">
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/j6VlT_jUVPc?si=Dn3xfHnBDm_IUBH2"
+                title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              ></iframe>
+              <div class="recipes__video-caption">
+                <p>Receta en Aeropress</p>
+                <p>~5 min</p>
+              </div>
+            </div>
+            <div class="recipes__video-item">
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/st571DYYTR8?si=TEgJpXngvV13xiwh"
+                title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              ></iframe>
+              <div class="recipes__video-caption">
+                <p>Receta en cafetera francesa</p>
+                <p>~15 min</p>
+              </div>
+            </div>
+          </div>
+        </section>
         <section class="reservation"></section>
       </main>
       <footer class="footer"></footer>
