--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
             <li>
               <a href="#recipes" class="nav__link">Recetas</a>
             </li>
-            <li><a href="#" class="nav__link">Reservar una Mesa</a></li>
+            <li>
+              <a href="#reservation" class="nav__link">Reservar una Mesa</a>
+            </li>
             <li>
               <a href="#" class="nav__link">Contactos</a>
             </li>
@@ -40,10 +42,10 @@
           <span class="header__title-accent">Café de Especialidad <br /></span>
           en Triple Peaks
         </h1>
-        <div class="header__description">
+        <p class="header__description">
           ¡Te damos la bienvenida a nuestra zona de estudio! Aquí tenemos café
           para darte energía y motivar tu creatividad.
-        </div>
+        </p>
         <img
           class="header__image"
           src="./images/inside_coffee_shop.png"
@@ -77,6 +79,7 @@
           <div class="recipes__videos">
             <div class="recipes__video-item">
               <iframe
+                class="recipes__iframe"
                 width="560"
                 height="315"
                 src="https://www.youtube.com/embed/j6VlT_jUVPc?si=Dn3xfHnBDm_IUBH2"
@@ -92,6 +95,7 @@
             </div>
             <div class="recipes__video-item">
               <iframe
+                class="recipes__iframe"
                 width="560"
                 height="315"
                 src="https://www.youtube.com/embed/st571DYYTR8?si=TEgJpXngvV13xiwh"
@@ -107,7 +111,7 @@
             </div>
           </div>
         </section>
-        <section class="reservation"></section>
+        <section id="reservation" class="reservation"></section>
       </main>
       <footer class="footer"></footer>
     </div>
