Formulario Primera Parte

--- a/index.html
+++ b/index.html
@@ -111,7 +111,56 @@
             </div>
           </div>
         </section>
-        <section id="reservation" class="reservation"></section>
+
+        <section id="reservation" class="reservation">
+          <h2 class="reservation__title">Reservar una mesa</h2>
+          <form class="form__reservation">
+            <div class="form__fieldset">
+              <label class="form__label" for="nombre">Nombre *</label>
+              <input
+                class="form__input"
+                id="nombre"
+                type="text"
+                placeholder="Nombre"
+              />
+            </div>
+            <div class="form__fieldset">
+              <label class="form__label" for="comensales"
+                >Número de comensales *</label
+              >
+              <input
+                class="form__input"
+                id="comensales"
+                type="number"
+                min="1"
+                max="8"
+                placeholder="1-8"
+              />
+              <label class="form__label" for="fechaHora">Fecha y hora *</label>
+              <input class="form__input" id="fechaHora" type="date" />
+              <label class="form__label" for="correoElectronico"
+                >Correo Electrónico</label
+              >
+              <input
+                class="form__input"
+                id="correoElectronico"
+                type="email"
+                placeholder="email@email.com"
+              />
+            </div>
+            <button class="form__button" type="submit">
+              Reservar una mesa
+            </button>
+            <div class="form__checkbox">
+              <label for="terminos">Acepto los términos de uso</label>
+              <input
+                class="form__checkbox-input"
+                id="terminos"
+                type="checkbox"
+              />
+            </div>
+          </form>
+        </section>
       </main>
       <footer class="footer"></footer>
     </div>
