--- a/index.html
+++ b/index.html
@@ -119,30 +119,35 @@
               <label class="form__label" for="nombre">Nombre *</label>
               <input
                 class="form__input"
+                required
                 id="nombre"
                 type="text"
                 placeholder="Nombre"
               />
-            </div>
-            <div class="form__fieldset">
+
               <label class="form__label" for="comensales"
                 >Número de comensales *</label
               >
+
               <input
                 class="form__input"
+                required
                 id="comensales"
                 type="number"
                 min="1"
                 max="8"
                 placeholder="1-8"
               />
+
               <label class="form__label" for="fechaHora">Fecha y hora *</label>
-              <input class="form__input" id="fechaHora" type="date" />
+              <input class="form__input" required id="fechaHora" type="date" />
+
               <label class="form__label" for="correoElectronico"
                 >Correo Electrónico</label
               >
               <input
                 class="form__input"
+                required
                 id="correoElectronico"
                 type="email"
                 placeholder="email@email.com"
@@ -152,9 +157,12 @@
               Reservar una mesa
             </button>
             <div class="form__checkbox">
-              <label for="terminos">Acepto los términos de uso</label>
+              <label class="checkbox__label" for="terminos"
+                >Acepto los términos de uso</label
+              >
               <input
                 class="form__checkbox-input"
+                required
                 id="terminos"
                 type="checkbox"
               />
