--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
         <section id="reservation" class="reservation">
           <h2 class="reservation__title">Reservar una mesa</h2>
-          <form class="eservation__form">
+          <form class="reservation__form">
             <div class="form__fieldset">
               <label class="form__label" for="nombre">Nombre *</label>
               <input
