Actualizacion de clase en base a BEM

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
               Reservar una mesa
             </button>
             <div class="form__checkbox">
-              <label class="checkbox__label" for="terminos"
+              <label class="form__checkbox-label" for="terminos"
                 >Acepto los términos de uso</label
               >
               <input
