--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="keywords" content="html, css, javascript" />
     <meta name="author" content="Osvaldo O." />
     <link rel="shortcut icon" href="favicon.ico" />
-    <link rel="stylesheet" href="./vendor/normalize.css" />
     <link rel="stylesheet" href="./pages/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -170,7 +169,40 @@
           </form>
         </section>
       </main>
-      <footer class="footer"></footer>
+
+      <footer class="footer">
+        <div class="footer__content">
+          <img
+            class="footer__logo"
+            src="./images/logo_coffeeshop_light.svg"
+            alt="Logo Triple Espresso"
+          />
+
+          <div class="footer__social">
+            <h3 class="footer__social-heading">Redes sociales</h3>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <h4 class="footer__social-link">Facebook</h4>
+                <img
+                  class="footer__social-icon"
+                  src="./images/facebook_white.svg"
+                  alt="Facebook"
+                />
+              </li>
+              <li class="footer__list-item">
+                <h4 class="footer__social-link">Instagram</h4>
+                <img
+                  class="footer__social-icon"
+                  src="./images/instagram_white.svg"
+                  alt="Instagram"
+                />
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer__circle"></div>
+        <h3 class="footer__copyright">© 2025 Osvaldo Ochoa</h3>
+      </footer>
     </div>
   </body>
 </html>
